# NLP-Research

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: analysis.yml  tests.yml
docs/: gui_agent_skils.md
micrograd/: engine.py
nlp/: hparams.py  utils.py
nlp_research/: decoding.py  hparams.py  train.py  trainer.py  utils.py
nlp_research/basics/: __init__.py  attention.py  conv.py  hf_text_classifier.py  image_processing_cv2.py  knn.py  linear_regression.py  logistic_regression.py  lstm.py  nn.py  regex_information_extraction.py  rnn.py  sklearn_text_classifier.py  tokenization.py
nlp_research/deep_ml/: __init__.py  computer_vision.py  deep_learning.py  layers.py  linear_algebra.py  machine_learning.py  nlp.py
nlp_research/gpt_oss/tools/: apply_patch.py  docker.py  tool.py
nlp_research/gpt_oss/tools/browser/: backend.py  browser_tool.py  page_contents.py
nlp_research/gpt_oss/torch/: model.py  weights.py
nlp_research/hrm/: hrm.py
nlp_research/hrm/dataset/: build_arc_dataset.py  build_chess_dataset.py  build_maze_dataset.py  build_sudoku_dataset.py  common.py
nlp_research/hrm/models/: __init__.py  common.py  layers.py  losses.py  sparse_embedding.py
nlp_research/micrograd/: engine.py
nlp_research/modules/: embeddings.py  summary_mixing.py
nlp_research/nlp/: decoding.py  hparams.py  train.py  trainer.py
nlp_research/nlp/modules/: embeddings.py
nlp_research/nlp/transformers/: bert.py  gpt.py  transformer.py
nlp_research/nlp/unet/: unet.py
nlp_research/slp/: conformer.py  data.py  hf_asr_inference.py  hf_datasets.py  normalize_audio.py  torchaudio_squim.py  utils.py  verify_speaker.py  whisper_inference.py  whisper_vad.py
nlp_research/slp/asr/: __init__.py  faster_whisper_inference.py  hf_asr_inference.py
nlp_research/slp/mamba/: transformer.py
nlp_research/slp/mamba/modules/: asr_transformer.py  conformer.py  conmamba.py  data_structures.py
nlp_research/slp/tts/: attend.py  discriminator.py  networks.py  transformer.py  utils.py  visual.py  vits.py  wavenet.py
nlp_research/slp/tts/hparams/: __init__.py  vits_hparams.py
nlp_research/slp/tts/vits/: attend.py  hifigan.py  modules.py  vits.py
nlp_research/trainers/: collators.py  data.py  hparams.py  whipser.py
nlp_research/transformers/: bert.py  gpt.py  transformer.py
nlp_research/unet/: unet.py
slp/: normalize_audio.py  torchaudio_squim.py  whisper_inference.py
tests/: test_deep_ml_deep_learning.py  test_deep_ml_linear_algebra.py  test_deep_ml_machine_learning.py  test_deep_ml_nlp.py  test_slp_tts_attend.py
